--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ form {
 input, select, button {
   padding: 10px;
   border: none;
-  border-radius: 5px;
+  border-radius: 8px;
 }
 input, select {
   background: #333;
@@ -26,6 +26,10 @@ button {
   background: #00bfa6;
   color: #fff;
   flex: 1 1 100px;
+  font-size: 0.9em;
+}
+#form button {
+  margin-bottom: 15px;
 }
 #list p {
   margin: 5px 0;
