--- a/style.css
+++ b/style.css
@@ -1,34 +1,11 @@
 
 body {
+  background-color: #111;
+  color: #fff;
   font-family: sans-serif;
   margin: 0;
-  padding: 0;
-  background: #111;
-  color: #fff;
+  padding: 1rem;
 }
-.container {
-  padding: 1em;
-}
-input, select, button {
-  margin: 0.2em;
-  padding: 0.5em;
-}
-button {
-  background: teal;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-#suggestions {
-  background: #222;
-  border: 1px solid #333;
-  max-height: 100px;
-  overflow-y: auto;
-}
-#suggestions div {
-  padding: 0.5em;
-  cursor: pointer;
-}
-#suggestions div:hover {
-  background: #444;
+h1 {
+  text-align: center;
 }
