--- a/style.css
+++ b/style.css
@@ -1,10 +1,1 @@
-
-body {
-  background-color: #121212;
-  color: #fff;
-  font-family: sans-serif;
-  padding: 1rem;
-}
-h1 {
-  text-align: center;
-}
+body { background: #111; color: white; font-family: sans-serif; }
