--- a/style.css
+++ b/style.css
@@ -1,1 +1,24 @@
-body { background: #111; color: white; font-family: sans-serif; }
+
+body {
+  font-family: sans-serif;
+  background-color: #121212;
+  color: white;
+  padding: 1em;
+}
+input, select, button {
+  display: block;
+  width: 100%;
+  margin: 0.5em 0;
+  padding: 0.5em;
+  border-radius: 6px;
+  border: none;
+}
+#suggestions {
+  background: #222;
+  padding: 0.5em;
+  border-radius: 5px;
+}
+#suggestions div {
+  padding: 0.3em 0;
+  cursor: pointer;
+}
