--- a/style.css
+++ b/style.css
@@ -1,47 +1,1 @@
-body {
-  background: #111;
-  color: white;
-  font-family: sans-serif;
-  margin: 0;
-  padding: 1em;
-}
-.container {
-  max-width: 600px;
-  margin: auto;
-  text-align: left;
-}
-input, select, button {
-  width: 100%;
-  margin: 0.3em 0;
-  padding: 0.5em;
-  border-radius: 5px;
-  border: none;
-}
-button {
-  background: #00b894;
-  color: white;
-  font-weight: bold;
-  cursor: pointer;
-}
-#suggestions {
-  background: #222;
-  max-height: 200px;
-  overflow-y: auto;
-  margin-bottom: 1em;
-  font-size: 0.8rem;
-}
-#suggestions div {
-  padding: 0.5em;
-  cursor: pointer;
-}
-#suggestions div:hover {
-  background: #444;
-}
-.entry {
-  background: #222;
-  padding: 0.5em;
-  margin: 0.3em 0;
-  border-radius: 5px;
-  display: flex;
-  justify-content: space-between;
-}
+body { background: #111; color: white; font-family: sans-serif; padding: 2em; }
